--- a/pom.xml
+++ b/pom.xml
@@ -45,9 +45,13 @@
   			<groupId>org.modelmapper</groupId>
 	  		<artifactId>modelmapper</artifactId>
 	  		<version>3.0.0</version>
-			</dependency>
+		</dependency>
+		<dependency>
+		    <groupId>io.swagger.core.v3</groupId>
+		    <artifactId>swagger-annotations</artifactId>
+		    <version>2.2.2</version>
+		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
